Added and updated some of the templates related to password reset
Modified the password_rest_confirm.html, and the forgot.html templates.
Added the email template

--- a/my_django_app/customer/Templates/Customer/registration/forgot.html
+++ b/my_django_app/customer/Templates/Customer/registration/forgot.html
@@ -103,7 +103,7 @@ License: You must have a valid license purchased only from themeforest(the above
                     <!--begin::Forgot-->
                     <div class="login-form">
                         <!--begin::Form-->
-                        <form class="form" id="kt_login_forgot_form" action="">
+                        <form method="POST" class="form" id="kt_login_forgot_form" > {% csrf_token %}
                             <!--begin::Title-->
                             <div class="pb-5 pb-lg-15">
                                 <h3 class="font-weight-bolder text-dark font-size-h2 font-size-h1-lg">Forgotten Password
@@ -115,8 +115,9 @@ License: You must have a valid license purchased only from themeforest(the above
 
                             <!--begin::Form group-->
                             <div class="form-group">
-                                <input class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"
-                                    type="email" placeholder="Email" name="email" autocomplete="on" />
+                                {% comment %} <input class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"
+                                    type="email" placeholder="Email" name="email" autocomplete="on" /> {% endcomment %}
+                                {{ form.email }}
                             </div>
                             <!--end::Form group-->
 
@@ -125,6 +126,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <button type="submit" id="kt_login_forgot_form_submit_button"
                                     class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-4">Submit</button>
                                 <!-- <a href="custom/pages/login/login-3/signin.html"  id="kt_login_forgot_cancel" class="btn btn-light-primary font-weight-bolder font-size-h6 px-8 py-4 my-3">Cancel</a> -->
+                                {% comment %} <button type="submit">Submit</button> {% endcomment %}
                             </div>
                             <!--end::Form group-->
                         </form>
@@ -216,7 +218,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 
     <!--begin::Page Scripts(used by this page)-->
-    <script src="{%static 'customer/login-3.js'%}"></script>
+    {% comment %} <script src="{%static 'customer/login-3.js'%}"></script> {% endcomment %}
 
     <!--end::Page Scripts-->
 </body>
