--- a/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
+++ b/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
@@ -112,7 +112,7 @@ License: You must have a valid license purchased only from themeforest(the above
                     <!--begin::Forgot-->
                     <div class="login-form">
                         <!--begin::Form-->
-                        <form class="form" id="kt_login_forgot_form" action="">
+                        <form method="POST" class="form" id="kt_login_forgot_form"> {% csrf_token %}
                             <!--begin::Title-->
                             <div class="pb-5 pb-lg-15">
                                 <h3 class="font-weight-bolder text-dark font-size-h2 font-size-h1-lg">Forgotten Password
@@ -124,16 +124,16 @@ License: You must have a valid license purchased only from themeforest(the above
                             <!--begin::Form Group-->
                         <div class="form-group">
                             <label class="font-size-h6 font-weight-bolder text-dark">Password</label>                            
-                            <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />    
-                            
+                            {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
+                            {{ form.new_password1 }}
                         </div>
                         <!--end::Form Group-->
 
                         <!--begin::Form Group-->
                         <div class="form-group">
                             <label class="font-size-h6 font-weight-bolder text-dark">Comfirm Password</label>                            
-                            <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />    
-                            
+                            {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
+                            {{ form.new_password2 }}
                         </div>
                         <!--end::Form Group-->
 
@@ -233,7 +233,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 
     <!--begin::Page Scripts(used by this page)-->
-    <script src="{%static 'customer/login-3.js'%}"></script>
+    {% comment %} <script src="{%static 'customer/login-3.js'%}"></script> {% endcomment %}
 
     <!--end::Page Scripts-->
 </body>
