Added the logo to (queueManagment and edit) pages

--- a/my_django_app/customer/Templates/Customer/edit.html
+++ b/my_django_app/customer/Templates/Customer/edit.html
@@ -41,7 +41,8 @@
                 <!--begin::Card-->
                 <div class="card card-custom gutter-bs">
                     <!--begin::Header-->
-                    <div class="card-header card-header-tabs-line">
+                    <div class="card-header card-header-tabs-line">                                        
+                        
                         <div class="card-toolbar">
                             <ul class="nav nav-tabs nav-tabs-space-lg nav-tabs-line nav-tabs-bold nav-tabs-line-3x"
                                 role="tablist">
@@ -112,6 +113,11 @@
 
                             </ul>
                         </div>
+                        <!--begin::Aside Bottom-->
+                        <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
+                            style=" background-position-x: calc(100% + 16rem); background-position-y: calc(100% - 1rem ); background-image: url({%static 'customer/pattren_bottom.png' %}); background-size: 814.66px 52.688px ;" >
+                        </div>
+                        <!--end::Aside Bottom-->
                     </div>
                     <!--end::Header-->
 
@@ -182,7 +188,9 @@
                                         <button type="submit" id="kt_login_singin_form_submit_button"
                                             class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3">SignIn</button>
                                     </div> -->
+                                    
                                     <div class="card-footer" style="float: right;">
+                                        
                                         <button type="submit" class="btn btn-primary mr-2" name="btnform1">Submit</button>
                                         <button type="submit" class="btn btn-danger" name="btnform2">Delete</button>
                                     </div>
