--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -104,13 +104,13 @@ License: You must have a valid license purchased only from themeforest(the above
 		<div class="d-flex flex-row flex-column-fluid page">
 
 			<!--begin::Aside-->
-			<div class="aside aside-left  aside-fixed  d-flex flex-column flex-row-auto" id="kt_aside">
+			<div class="aside aside-left  aside-fixed  d-flex flex-column flex-row-auto"  id="kt_aside">
 				<!--begin::Brand-->
 				<div class="brand flex-column-auto " id="kt_brand">
 					<!--begin::Logo-->
-					<!-- <a href="index.html" class="brand-logo"> -->
-					<!-- <img alt="Logo" src="CMPS253/Template/assets/media/logos/logo-light.png"/>
-		</a> -->
+					<a href="index.html" class="brand-logo">
+						<img alt="Logo" src="{%static 'customer/logo_white.png'%}" class="max-h-50px" alt=""/>
+					</a>
 					<!--end::Logo-->
 
 					<!--begin::Toggle-->
