--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -214,7 +214,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         
                                         <!--begin::Aside Bottom-->
                                         <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
-                                            style=" background-image: url({%static 'customer/pattren_bottom.png' %}); background-size: cover ;" >
+                                            style=" background-position-y: calc(100%  ); background-image: url({%static 'customer/pattren_bottom.png' %}); background-size: cover ;" >
                                         </div>
                                         <!--end::Aside Bottom-->
                                         <div class="mr-2">
