Color change (See Description)
Changed the color of the numbers and their backgrounds which are on the side of the sign up page

--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -269,7 +269,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         "white": "#ffffff",
                         "primary": "#3699FF",
                         "secondary": "#E5EAEE",
-                        "success": "#1BC5BD",
+                        "success": "#1B78C5",
                         "info": "#8950FC",
                         "warning": "#FFA800",
                         "danger": "#F64E60",
@@ -280,7 +280,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         "white": "#ffffff",
                         "primary": "#E1F0FF",
                         "secondary": "#EBEDF3",
-                        "success": "#C9F7F5",
+                        "success": "#C9E2F7",
                         "info": "#EEE5FF",
                         "warning": "#FFF4DE",
                         "danger": "#FFE2E5",
