--- a/my_django_app/customer/Templates/Customer/edit.html
+++ b/my_django_app/customer/Templates/Customer/edit.html
@@ -433,7 +433,7 @@
                         "white": "#ffffff",
                         "primary": "#3699FF",
                         "secondary": "#E5EAEE",
-                        "success": "#1BC5BD",
+                        "success": "#1B78C5",
                         "info": "#8950FC",
                         "warning": "#FFA800",
                         "danger": "#F64E60",
@@ -444,7 +444,7 @@
                         "white": "#ffffff",
                         "primary": "#E1F0FF",
                         "secondary": "#EBEDF3",
-                        "success": "#C9F7F5",
+                        "success": "#C9E2F7",
                         "info": "#EEE5FF",
                         "warning": "#FFF4DE",
                         "danger": "#FFE2E5",
