--- a/my_django_app/guest/Templates/Guest/guest_beta.html
+++ b/my_django_app/guest/Templates/Guest/guest_beta.html
@@ -143,7 +143,7 @@
                         "white": "#ffffff",
                         "primary": "#3699FF",
                         "secondary": "#E5EAEE",
-                        "success": "#1BC5BD",
+                        "success": "#1B78C5",
                         "info": "#8950FC",
                         "warning": "#FFA800",
                         "danger": "#F64E60",
@@ -154,7 +154,7 @@
                         "white": "#ffffff",
                         "primary": "#E1F0FF",
                         "secondary": "#EBEDF3",
-                        "success": "#C9F7F5",
+                        "success": "#C9E2F7",
                         "info": "#EEE5FF",
                         "warning": "#FFF4DE",
                         "danger": "#FFE2E5",
