--- a/my_django_app/customer/Templates/Customer/signup.html
+++ b/my_django_app/customer/Templates/Customer/signup.html
@@ -160,12 +160,14 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--begin::Content-->
     <div class="login-content flex-column-fluid d-flex flex-column p-10">
         <!--begin::Top-->
+{% comment %} 
         <div class="text-right d-flex justify-content-center">
             <div class="top-signup text-right d-flex justify-content-end pt-5 pb-lg-0 pb-10">
     			<span class="font-weight-bold text-muted font-size-h4">Having issues?</span>
     			<a href="javascript:;" class="font-weight-bolder text-primary font-size-h4 ml-2" id="kt_login_signup">Get Help</a>
     		</div>
 		</div>
+{% endcomment %}
         <!--end::Top-->
 
         <!--begin::Wrapper-->
@@ -184,7 +186,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             <h3 class="font-weight-bolder text-dark display5">Create Account</h3>
                             <div class="text-muted font-weight-bold font-size-h4">
                                 Already have an Account ?
-                                <a href="customer/pages/login/login-3/signin.html" class="text-primary font-weight-bolder">Sign In</a>
+                                <a href="{% url 'signin-customer-page' %}" class="text-primary font-weight-bolder">Sign In</a>
                             </div>
                         </div>
                         <!--begin::Title-->
@@ -249,6 +251,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             <label class="font-size-h6 font-weight-bolder text-dark">Password</label>                            
                             {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
                             {{form.password1}}
+                            {% comment %} {{form.errors.password1}} {% endcomment %}
                         </div>
                         <!--end::Form Group-->
 
@@ -257,6 +260,14 @@ License: You must have a valid license purchased only from themeforest(the above
                             <label class="font-size-h6 font-weight-bolder text-dark">Comfirm Password</label>                            
                             {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
                             {{form.password2}}
+
+                            <div class="fv-plugins-message-container">
+                            {% for error in form.errors.password2 %}
+                                <div class="fv-help-block">
+                                    {{error}}
+                                </div>
+                            {% endfor %}
+                            </div>
                         </div>
                         <!--end::Form Group-->
 
@@ -414,7 +425,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 "white": "#ffffff",
                 "primary": "#3699FF",
                 "secondary": "#E5EAEE",
-                "success": "#1BC5BD",
+                "success": "#1B78C5",
                 "info": "#8950FC",
                 "warning": "#FFA800",
                 "danger": "#F64E60",
@@ -425,7 +436,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 "white": "#ffffff",
                 "primary": "#E1F0FF",
                 "secondary": "#EBEDF3",
-                "success": "#C9F7F5",
+                "success": "#C9E2F7",
                 "info": "#EEE5FF",
                 "warning": "#FFF4DE",
                 "danger": "#FFE2E5",
