Removed useless part of the page

--- a/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
+++ b/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
@@ -153,9 +153,10 @@ License: You must have a valid license purchased only from themeforest(the above
         <!--begin::Top-->
         <div class="text-right d-flex justify-content-center">
             <div class="top-signup text-right d-flex justify-content-end pt-5 pb-lg-0 pb-10">
-                
+{% comment %}                 
     			<span class="font-weight-bold text-muted font-size-h4">Having issues?</span>
                 <a href="javascript:;" class="font-weight-bolder text-primary font-size-h4 ml-2" id="kt_login_signup">Get Help</a>
+{% endcomment %}
                 <!--begin::Logo-->
                 <!-- <a href="#" class="text-center pt-2">
                     <img src= "{%static 'customer/Blue_sqrs.png'%}" class="max-h-125px" alt=""/>
@@ -412,7 +413,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 "white": "#ffffff",
                 "primary": "#3699FF",
                 "secondary": "#E5EAEE",
-                "success": "#1BC5BD",
+                "success": "#1B78C5",
                 "info": "#8950FC",
                 "warning": "#FFA800",
                 "danger": "#F64E60",
@@ -423,7 +424,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 "white": "#ffffff",
                 "primary": "#E1F0FF",
                 "secondary": "#EBEDF3",
-                "success": "#C9F7F5",
+                "success": "#C9E2F7",
                 "info": "#EEE5FF",
                 "warning": "#FFF4DE",
                 "danger": "#FFE2E5",
