--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -191,8 +191,11 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!--begin::Topbar-->
 						<div class="topbar">
 
-
-
+							<div class="topbar-item">
+								<form method="POST"> {% csrf_token %}
+									<button type='submit' class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5">Log out</button>
+								</form>
+							</div>
 
 							<!--begin::User-->
 							<div class="topbar-item">
