--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -57,10 +57,14 @@
                             <div class="card-body">
                                 <h1 style="font-size: 200px; text-align: center;">1</h1>
                             </div>
+                            <form action="" method="POST">
+                                {%csrf_token%}
                             <div class="card-footer d-flex justify-content-between">
-                                <input type="submit" value="Widthraw" class="btn btn-light-primary font-weight-bold">
+                                <button type="submit" class="btn btn-light-primary font-weight-bold">Withdraw</button>
+                                <!-- <input type="submit" value="Widthraw" class="btn btn-light-primary font-weight-bold"> -->
                                 <button type="button" class="btn text-muted">Time Left</button>
                             </div>
+                        </form>
                         </div>
 
                     </div>
