Some minor changes

--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -55,7 +55,7 @@
                         
                         <div class="card card-custom">
                             <div class="card-body">
-                                <h1 style="font-size: 200px; text-align: center;">1</h1>
+                                <h1 style="font-size: 200px; text-align: center;">{{guest.GuestNumber}}</h1>
                             </div>
                             <form action="" method="POST">
                                 {%csrf_token%}
