Added a button for the director to create queue operators

--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -153,35 +153,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div id="kt_header_menu"
 								class="header-menu header-menu-mobile  header-menu-layout-default ">
 								<!--begin::Header Nav-->
-								<ul class="menu-nav ">
-									<li class="menu-item  menu-item-submenu menu-item-rel menu-item-active"
-										data-menu-toggle="click" aria-haspopup="true"><a href="javascript:;"
-											class="menu-link menu-toggle"><span class="menu-text">Pages</span><i
-												class="menu-arrow"></i></a>
-
-									</li>
-									<li class="menu-item  menu-item-submenu" data-menu-toggle="click"
-										aria-haspopup="true"><a href="javascript:;" class="menu-link menu-toggle"><span
-												class="menu-text">Features</span><i class="menu-arrow"></i></a>
-										<div class="menu-submenu  menu-submenu-fixed menu-submenu-left"
-											style="width:1000px">
-											<div class="menu-subnav">
-												<ul class="menu-content">
-
-
-
-
-												</ul>
-											</div>
-										</div>
-									</li>
-									<li class="menu-item  menu-item-submenu menu-item-rel" data-menu-toggle="click"
-										aria-haspopup="true"><a href="javascript:;" class="menu-link menu-toggle"><span
-												class="menu-text">Apps</span><i class="menu-arrow"></i></a>
-
-									</li>
-									
-								</ul>
+								
 								<!--end::Header Nav-->
 							</div>
 							<!--end::Header Menu-->
@@ -296,7 +268,10 @@ License: You must have a valid license purchased only from themeforest(the above
 													</tr>
 													{% endfor %}
 												</tbody>
-											</table>										
+											</table>	
+											<a href="QueueOperatorSignup">
+												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queue operators</button>
+											</a>									
 										</div>
 									</div>
 								</div>
