--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -42,10 +42,10 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<!--begin::Layout Themes(used by all pages)-->
 
-	<link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
+	{% comment %} <link rel="stylesheet" href="{%static 'customer/dark.css'%}"> {% endcomment %}
+	{% comment %} <link rel="stylesheet" href="{%static 'customer/dark1.css'%}"> {% endcomment %}
 	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/light1.css'%}">
+	{% comment %} <link rel="stylesheet" href="{%static 'customer/light1.css'%}"> {% endcomment %}
 	<!--end::Layout Themes-->
 
 
@@ -56,7 +56,12 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--begin::Body-->
 
 <body id="kt_body"
-	class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable page-loading">
+	class="header-fixed "
+	{% comment %} class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable page-loading" {% endcomment %}
+	{% comment %} class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable page-loading" {% endcomment %}
+	
+	
+	>
 
 	<!--begin::Main-->
 	<!--begin::Header Mobile-->
@@ -69,11 +74,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Toolbar-->
 		<div class="d-flex align-items-center">
-			<!--begin::Aside Mobile Toggle-->
-			<button class="btn p-0 burger-icon burger-icon-left" id="kt_aside_mobile_toggle">
-				<span></span>
-			</button>
-			<!--end::Aside Mobile Toggle-->
+			
 
 
 			<!--begin::Topbar Mobile Toggle-->
@@ -103,57 +104,28 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page-->
 		<div class="d-flex flex-row flex-column-fluid page">
 
-			<!--begin::Aside-->
-			<div class="aside aside-left  aside-fixed  d-flex flex-column flex-row-auto"  id="kt_aside">
-				<!--begin::Brand-->
-				<div class="brand flex-column-auto " id="kt_brand">
-					<!--begin::Logo-->
-					<a href="index.html" class="brand-logo">
-						<img alt="Logo" src="{%static 'customer/logo_white.png'%}" class="max-h-50px" alt=""/>
-					</a>
-					<!--end::Logo-->
 
-					<!--begin::Toggle-->
-					<button class="brand-toggle btn btn-sm px-0" id="kt_aside_toggle">
-						<span class="svg-icon svg-icon svg-icon-xl">
-							<!--begin::Svg Icon | path:cutomer/assets/media/svg/icons/Navigation/Angle-double-left.svg--><svg
-								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-								<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-									<polygon points="0 0 24 0 24 24 0 24" />
-									<path
-										d="M5.29288961,6.70710318 C4.90236532,6.31657888 4.90236532,5.68341391 5.29288961,5.29288961 C5.68341391,4.90236532 6.31657888,4.90236532 6.70710318,5.29288961 L12.7071032,11.2928896 C13.0856821,11.6714686 13.0989277,12.281055 12.7371505,12.675721 L7.23715054,18.675721 C6.86395813,19.08284 6.23139076,19.1103429 5.82427177,18.7371505 C5.41715278,18.3639581 5.38964985,17.7313908 5.76284226,17.3242718 L10.6158586,12.0300721 L5.29288961,6.70710318 Z"
-										fill="#000000" fill-rule="nonzero"
-										transform="translate(8.999997, 11.999999) scale(-1, 1) translate(-8.999997, -11.999999) " />
-									<path
-										d="M10.7071009,15.7071068 C10.3165766,16.0976311 9.68341162,16.0976311 9.29288733,15.7071068 C8.90236304,15.3165825 8.90236304,14.6834175 9.29288733,14.2928932 L15.2928873,8.29289322 C15.6714663,7.91431428 16.2810527,7.90106866 16.6757187,8.26284586 L22.6757187,13.7628459 C23.0828377,14.1360383 23.1103407,14.7686056 22.7371482,15.1757246 C22.3639558,15.5828436 21.7313885,15.6103465 21.3242695,15.2371541 L16.0300699,10.3841378 L10.7071009,15.7071068 Z"
-										fill="#000000" fill-rule="nonzero" opacity="0.3"
-										transform="translate(15.999997, 11.999999) scale(-1, 1) rotate(-270.000000) translate(-15.999997, -11.999999) " />
-								</g>
-							</svg>
-							<!--end::Svg Icon-->
-						</span> </button>
-					<!--end::Toolbar-->
-				</div>
-				<!--end::Brand-->
-
-
-			</div>
-			<!--end::Aside-->
 
 			<!--begin::Wrapper-->
 			<div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
+			
 				<!--begin::Header-->
 				<div id="kt_header" class="header  header-fixed ">
 					<!--begin::Container-->
 					<div class=" container-fluid  d-flex align-items-stretch justify-content-between">
 						<!--begin::Header Menu Wrapper-->
 						<div class="header-menu-wrapper header-menu-wrapper-left" id="kt_header_menu_wrapper">
+							<!--begin::Header Logo-->
+							<div class="header-logo">
+								<a href="#">
+									<img alt="Logo" src="{%static 'customer/logo_white.png'%}" class="max-h-50px">
+								</a>
+							</div>
+							<!--end::Header Logo-->
 							<!--begin::Header Menu-->
 							<div id="kt_header_menu"
 								class="header-menu header-menu-mobile  header-menu-layout-default ">
 								<!--begin::Header Nav-->
-								
 								<!--end::Header Nav-->
 							</div>
 							<!--end::Header Menu-->
@@ -164,9 +136,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="topbar">
 
 							<div class="topbar-item">
-								<form method="POST"> {% csrf_token %}
-									<button type='submit' class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5">Log out</button>
-								</form>
+								
 							</div>
 
 							<!--begin::User-->
@@ -188,7 +158,11 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 					<!--end::Container-->
 				</div>
+
+				
 				<!--end::Header-->
+
+
 
 				<!--begin::Content-->
 				<div class="content  d-flex flex-column flex-column-fluid" id="kt_content">
@@ -247,8 +221,12 @@ License: You must have a valid license purchased only from themeforest(the above
 													{% endfor %}
 												</tbody>
 											</table>
+											
 											<a href="queueSetup">
 												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
+											</a>
+											<a href="{% url 'pdf' %}" target ="_blank" class="btn btn-primary mr-3">
+												<i class="fas fa-download"></i> test
 											</a>
 										</div>
 
@@ -273,8 +251,12 @@ License: You must have a valid license purchased only from themeforest(the above
 												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queue operators</button>
 											</a>									
 										</div>
+
+										
 									</div>
 								</div>
+
+		
 							</div>
 							<!--end::Card-->
 							<!-- <a href="queueSetup">
@@ -313,32 +295,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
 				<!--end::Content-->
 
-				<!--begin::Footer-->
-				<div class="footer bg-white py-4 d-flex flex-lg-column " id="kt_footer">
-					<!--begin::Container-->
-					<div
-						class=" container-fluid  d-flex flex-column flex-md-row align-items-center justify-content-between">
-						<!--begin::Copyright-->
-						<div class="text-dark order-2 order-md-1">
-							<span class="text-muted font-weight-bold mr-2">2020&copy;</span>
-							<a href="http://keenthemes.com/metronic" target="_blank"
-								class="text-dark-75 text-hover-primary">Keenthemes</a>
-						</div>
-						<!--end::Copyright-->
-
-						<!--begin::Nav-->
-						<div class="nav nav-dark">
-							<a href="http://keenthemes.com/metronic" target="_blank"
-								class="nav-link pl-0 pr-5">About</a>
-							<a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">Team</a>
-							<a href="http://keenthemes.com/metronic" target="_blank"
-								class="nav-link pl-0 pr-0">Contact</a>
-						</div>
-						<!--end::Nav-->
-					</div>
-					<!--end::Container-->
-				</div>
-				<!--end::Footer-->
+				
 			</div>
 			<!--end::Wrapper-->
 		</div>
@@ -346,9 +303,77 @@ License: You must have a valid license purchased only from themeforest(the above
 	</div>
 	<!--end::Main-->
 
+<div id="kt_quick_user" class="offcanvas offcanvas-right p-10">
+			<!--begin::Header-->
+			<div class="offcanvas-header d-flex align-items-center justify-content-between pb-5" kt-hidden-height="40" style="">
+				<h3 class="font-weight-bold m-0">User Profile 
+				</h3>
+				<a href="#" class="btn btn-xs btn-icon btn-light btn-hover-primary" id="kt_quick_user_close">
+					<i class="ki ki-close icon-xs text-muted"></i>
+				</a>
+			</div>
+			<!--end::Header-->
+			<!--begin::Content-->
+			<div class="offcanvas-content pr-5 mr-n5 scroll ps ps--active-y" style="height: 648px; overflow: hidden;">
+				<!--begin::Header-->
+				<div class="d-flex align-items-center mt-5">
+					<div class="symbol symbol-100 mr-5">
+						<div class="symbol-label" style="background-image:url('{%static 'customer/300_21.jpg'%}')"></div>
+						
+					</div>
+					<div class="d-flex flex-column">
+						<a href="#" class="font-weight-bold font-size-h5 text-dark-75 text-hover-primary">{{director.user.first_name}}</a>
+						
+						<div class="navi mt-2">
+							<a href="#" class="navi-item">
+								<span class="navi-link p-0 pb-2">
+									<span class="navi-icon mr-1">
+										<span class="svg-icon svg-icon-lg svg-icon-primary">
+											<!--begin::Svg Icon | path:/metronic/theme/html/demo1/dist/assets/media/svg/icons/Communication/Mail-notification.svg-->
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+													<rect x="0" y="0" width="24" height="24"></rect>
+													<path d="M21,12.0829584 C20.6747915,12.0283988 20.3407122,12 20,12 C16.6862915,12 14,14.6862915 14,18 C14,18.3407122 14.0283988,18.6747915 14.0829584,19 L5,19 C3.8954305,19 3,18.1045695 3,17 L3,8 C3,6.8954305 3.8954305,6 5,6 L19,6 C20.1045695,6 21,6.8954305 21,8 L21,12.0829584 Z M18.1444251,7.83964668 L12,11.1481833 L5.85557487,7.83964668 C5.4908718,7.6432681 5.03602525,7.77972206 4.83964668,8.14442513 C4.6432681,8.5091282 4.77972206,8.96397475 5.14442513,9.16035332 L11.6444251,12.6603533 C11.8664074,12.7798822 12.1335926,12.7798822 12.3555749,12.6603533 L18.8555749,9.16035332 C19.2202779,8.96397475 19.3567319,8.5091282 19.1603533,8.14442513 C18.9639747,7.77972206 18.5091282,7.6432681 18.1444251,7.83964668 Z" fill="#000000"></path>
+													<circle fill="#000000" opacity="0.3" cx="19.5" cy="17.5" r="2.5"></circle>
+												</g>
+											</svg>
+											<!--end::Svg Icon-->
+										</span>
+									</span>
+									<span class="navi-text text-muted text-hover-primary">{{director.user.email}}</span>
+								</span>
+							</a>
+							<form method="POST"> {% csrf_token %}
+									<button type='submit' class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5">Log out</button>
+								</form>
+						</div>
+					</div>
+				</div>
+				<!--end::Header-->
+				<!--begin::Separator-->
+				
+				<!--end::Separator-->
+				<!--begin::Nav-->
+				
+				<!--end::Nav-->
+				<!--begin::Separator-->
+				<div class="separator separator-dashed my-7"></div>
+				<!--end::Separator-->
+				<!--begin::Notifications-->
+				
+				<!--end::Notifications-->
+			<div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 648px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 300px;"></div></div></div>
+			<!--end::Content-->
+		</div>
 
-
-
+	<style>
+		.header {
+    background-color: #1e1e2d;
+}
+	#kt_quick_user_toggle:hover{
+		background-color: #292f48;
+	}
+	</style>
 
 
 	<script>var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";</script>
