--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -309,7 +309,17 @@ License: You must have a valid license purchased only from themeforest(the above
 				<h3 class="font-weight-bold m-0">User Profile 
 				</h3>
 				<a href="#" class="btn btn-xs btn-icon btn-light btn-hover-primary" id="kt_quick_user_close">
-					<i class="ki ki-close icon-xs text-muted"></i>
+					{% comment %} <i class="ki ki-close icon-xs text-muted"></i> {% endcomment %}
+					<span class="svg-icon svg-icon-primary svg-icon-2x">
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12px" height="12px" viewBox="0 0 24 24" version="1.1">
+							<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								<g transform="translate(12.000000, 12.000000) rotate(-45.000000) translate(-12.000000, -12.000000) translate(4.000000, 4.000000)" fill="#000000">
+									<rect x="0" y="7" width="10" height="2" rx="1"/>
+									<rect opacity="0.3" transform="translate(8.000000, 8.000000) rotate(-270.000000) translate(-8.000000, -8.000000) " x="0" y="7" width="16" height="2" rx="1"/>
+								</g>
+							</g>
+						</svg><!--end::Svg Icon-->
+					</span>
 				</a>
 			</div>
 			<!--end::Header-->
